src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__for_with_missing_semicolon_in_body.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error[E006]: Missing expected Token `;` or `:`
  ┌─ <internal>:4:13
  │
4 │             END_FOR
  │             ^^^^^^^ Missing expected Token `;` or `:`

error[E007]: Unexpected token: expected `;` but found 'END_FOR'
  ┌─ <internal>:4:13
  │
4 │             END_FOR
  │             ^^^^^^^ Unexpected token: expected `;` but found 'END_FOR'
