src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__incomplete_statement_in_parantheses_recovery_test.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: diagnostics
---
error: Unexpected token: expected Literal but found )
  ┌─ <internal>:3:22
  │
3 │             (1 + 2 - ) + 3;
  │                      ^ Unexpected token: expected Literal but found )


