src/parser/tests/parse_errors/snapshots/rusty__parser__tests__parse_errors__parse_error_statements_tests__mismatched_parantheses_recovery_test-2.snap
---
source: src/parser/tests/parse_errors/parse_error_statements_tests.rs
expression: pou.statements
---
[
    ParenExpression {
        expression: BinaryExpression {
            operator: Plus,
            left: LiteralInteger {
                value: 1,
            },
            right: LiteralInteger {
                value: 2,
            },
        },
    },
    ReferenceExpr {
        kind: Member(
            Identifier {
                name: "x",
            },
        ),
        base: None,
    },
]
